--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google">
+            alt="Google" style="padding-top: 109px;">
     </div>
             <div class="thin-gray-box">
     </div>
