2nd logo reposition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             display: inline;
         }
         .fit-picture {
-            width: 250px;
+            width: 272px;
+            height: 92px;
+            position: absolute;
+            padding-top: 150px;
         }
         .thin-gray-box {
             width: 250px;
@@ -22,6 +25,7 @@
             border-style: solid;
             border-radius: 10px;
         }
+    
     </style>
     <div>
     <nav>
@@ -37,7 +41,7 @@
     <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google" style="padding-top: 109px;">
+            alt="Google" style="float: center;">
     </div>
             <div class="thin-gray-box">
     </div>
