3rd logo reposition

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         .fit-picture {
             width: 272px;
             height: 92px;
-            position: absolute;
+            position: static;
             padding-top: 150px;
+            padding-left: 500px;
         }
         .thin-gray-box {
             width: 250px;
@@ -24,6 +25,8 @@
             border-width: 2px;
             border-style: solid;
             border-radius: 10px;
+            padding-left: 500px;
+            padding-top: 250px;
         }
     
     </style>
@@ -41,7 +44,7 @@
     <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google" style="float: center;">
+            alt="Google">
     </div>
             <div class="thin-gray-box">
     </div>
@@ -54,7 +57,7 @@
                     <li style="float: left;"><a>How Search Works</a></li>
                     <li style="float: right;"><a>Privacy</a></li>
                     <li style="float: right;"><a>Terms</a></li>
-                    <li style="float: right;"><a>Settings></a></li>
+                    <li style="float: right;"><a>Settings</a></li>
                 </ul>
             </nav>
         </footer>
