--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             border-width: 2px;
             border-style: solid;
             border-radius: 10px;
-            padding-left: 500px;
-            padding-top: 250px;
+            margin: auto;
         }
     
     </style>
@@ -44,7 +43,7 @@
     <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google">
+            alt="Google" style="margin: auto;">
     </div>
             <div class="thin-gray-box">
     </div>
