--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<body>
 <main>
     <style>
         ul {
@@ -29,24 +28,28 @@
         }
     
     </style>
+    <header>
     <div>
     <nav>
         <ul>
-            <li style="float: left;"><a>About</a></li>
-            <li style="float: left;"><a>Store</a></li>
-            <li style="float: right;"><a>Gmail</a></li>
-            <li style="float: right;"><a>Images</a></li>
-            <li style="float: right;"><a>Sign In</a></li>
+            <li style="float: left; padding: 5px;"><a>About</a></li>
+            <li style="float: left; padding: 5px;"><a>Store</a></li>
+            <li style="float: right; padding: 5px;"><a>Gmail</a></li>
+            <li style="float: right; padding: 5px;"><a>Images</a></li>
+            <li style="float: right; padding: 5px;"><a>Sign In</a></li>
         </ul>
     </nav>
     </div>
-    <div>
+    </header>
+    <body>
+       <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
             alt="Google" style="margin: auto;">
     </div>
             <div class="thin-gray-box">
     </div>
+    </body>
     <div>
         <footer>
             <nav>
