--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             margin: 0;
             padding: 0;
             font-family:Arial, Helvetica, sans-serif;
+            height: 50px;
             }
         li {
             display: inline;
@@ -14,17 +15,17 @@
             width: 272px;
             height: 92px;
             position: static;
-            padding-top: 150px;
-            padding-left: 500px;
+            margin: auto;
         }
         .thin-gray-box {
-            width: 250px;
+            width: 5000px;
             height: 50px;
             border-color: gray;
             border-width: 2px;
             border-style: solid;
-            border-radius: 10px;
+            border-radius: 20px;
             margin: auto;
+            padding-top: 100px;
         }
     
     </style>
@@ -54,12 +55,12 @@
         <footer>
             <nav>
                 <ul>
-                    <li style="float: left;"><a>Advertising</a></li>
-                    <li style="float: left;"><a>Business</a></li>
-                    <li style="float: left;"><a>How Search Works</a></li>
-                    <li style="float: right;"><a>Privacy</a></li>
-                    <li style="float: right;"><a>Terms</a></li>
-                    <li style="float: right;"><a>Settings</a></li>
+                    <li style="float: left; padding: 5px;"><a>Advertising</a></li>
+                    <li style="float: left; padding: 5px;"><a>Business</a></li>
+                    <li style="float: left; padding: 5px;"><a>How Search Works</a></li>
+                    <li style="float: right; padding: 5px;"><a>Privacy</a></li>
+                    <li style="float: right; padding: 5px;"><a>Terms</a></li>
+                    <li style="float: right; padding: 5px;"><a>Settings</a></li>
                 </ul>
             </nav>
         </footer>
