--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         .fit-picture {
             width: 272px;
             height: 92px;
-            position: static;
+            position: relative;
             margin: auto;
         }
         .thin-gray-box {
-            width: 5000px;
+            width: 500px;
             height: 50px;
             border-color: gray;
             border-width: 2px;
@@ -35,9 +35,9 @@
         <ul>
             <li style="float: left; padding: 5px;"><a>About</a></li>
             <li style="float: left; padding: 5px;"><a>Store</a></li>
-            <li style="float: right; padding: 5px;"><a>Gmail</a></li>
-            <li style="float: right; padding: 5px;"><a>Images</a></li>
             <li style="float: right; padding: 5px;"><a>Sign In</a></li>
+            <li style="float: right; padding: 5px;"><a>Images</a></li>
+            <li style="float: right; padding: 5px;"><a>Gmail</a></li>
         </ul>
     </nav>
     </div>
@@ -58,9 +58,9 @@
                     <li style="float: left; padding: 5px;"><a>Advertising</a></li>
                     <li style="float: left; padding: 5px;"><a>Business</a></li>
                     <li style="float: left; padding: 5px;"><a>How Search Works</a></li>
-                    <li style="float: right; padding: 5px;"><a>Privacy</a></li>
-                    <li style="float: right; padding: 5px;"><a>Terms</a></li>
                     <li style="float: right; padding: 5px;"><a>Settings</a></li>
+                    <li style="float: right; padding: 5px;"><a>Terms</a></li>
+                    <li style="float: right; padding: 5px;"><a>Privacy</a></li>
                 </ul>
             </nav>
         </footer>
