--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<main>
+<body style="width: 100%; height: 100%; margin: 0px;">
+    <main>
     <style>
         ul {
             list-style-type: none;
@@ -25,7 +26,6 @@
             border-style: solid;
             border-radius: 20px;
             margin: auto;
-            padding-top: 100px;
         }
     
     </style>
@@ -35,14 +35,13 @@
         <ul>
             <li style="float: left; padding: 5px;"><a>About</a></li>
             <li style="float: left; padding: 5px;"><a>Store</a></li>
-            <li style="float: right; padding: 5px;"><a>Sign In</a></li>
+            <li style="float: right; padding: 5px; background: blue;"><a>Sign In</a></li>
             <li style="float: right; padding: 5px;"><a>Images</a></li>
             <li style="float: right; padding: 5px;"><a>Gmail</a></li>
         </ul>
     </nav>
     </div>
     </header>
-    <body>
        <div>
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
@@ -50,7 +49,6 @@
     </div>
             <div class="thin-gray-box">
     </div>
-    </body>
     <div>
         <footer>
             <nav>
