--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<body style="width: 100%; height: 100%; margin: 0px;">
+<html style="min-height: 100%">
+    <body style="width: 100%; min-height: 100vh; margin: 0px;">
     <main>
     <style>
         ul {
@@ -63,4 +64,4 @@
             </nav>
         </footer>
     </div>
-        </main></body>
+        </main></body></html>
