--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
     </nav>
     </div>
     </header>
-       <div>
+       <div style="vertical-align: middle;">
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google" style="margin: auto;">
-    </div>
-            <div class="thin-gray-box">
+            alt="Google" class="thin-gray-box">
     </div>
     <div>
         <footer>
