--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     </style>
     <header>
-    <div>
+    <div style="height: 10%;">
     <nav>
         <ul>
             <li style="float: left; padding: 5px;"><a>About</a></li>
@@ -43,12 +43,12 @@
     </nav>
     </div>
     </header>
-       <div style="vertical-align: middle;">
+       <div style="vertical-align: middle; height: 80%;">
     <img class="fit-picture"
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
             alt="Google" class="thin-gray-box">
     </div>
-    <div>
+    <div style="height: 10%;">
         <footer>
             <nav>
                 <ul>
