--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html style="min-height: 100%">
     <body style="width: 100%; min-height: 100vh; margin: 0px;">
-    <main>
-    <style>
+        <main>
+        <style>
         ul {
             list-style-type: none;
-            margin: 0;
-            padding: 0;
+            margin-bottom: 150px;
+            padding: 10 10 10 10;
             font-family:Arial, Helvetica, sans-serif;
             height: 50px;
             }
@@ -30,25 +30,28 @@
         }
     
     </style>
-    <header>
-    <div style="height: 10%;">
-    <nav>
-        <ul>
-            <li style="float: left; padding: 5px;"><a>About</a></li>
-            <li style="float: left; padding: 5px;"><a>Store</a></li>
-            <li style="float: right; padding: 5px; background: blue;"><a>Sign In</a></li>
-            <li style="float: right; padding: 5px;"><a>Images</a></li>
-            <li style="float: right; padding: 5px;"><a>Gmail</a></li>
-        </ul>
-    </nav>
-    </div>
-    </header>
-       <div style="vertical-align: middle; height: 80%;">
-    <img class="fit-picture"
-        src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-            alt="Google" class="thin-gray-box">
-    </div>
-    <div style="height: 10%;">
+         <header>
+                <div>
+                <nav>
+                <ul>
+                    <li style="float: left; padding: 5px;"><a>About</a></li>
+                    <li style="float: left; padding: 5px;"><a>Store</a></li>
+                     <li style="float: right; padding: 5px; background: blue;"><a>Sign In</a></li>
+                    <li style="float: right; padding: 5px;"><a>Images</a></li>
+                    <li style="float: right; padding: 5px;"><a>Gmail</a></li>
+                </ul>
+                </nav>
+                 </div>
+         </header>
+       <div>
+             <img class="fit-picture"
+                    src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                     alt="Google">
+        </div>
+        <div class="margin-bottom: 150px;">
+            <class="thin-gray-box">
+        </div>
+        <div>
         <footer>
             <nav>
                 <ul>
