--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             height: 92px;
             position: relative;
             margin: auto;
+            display: block;
         }
         .thin-gray-box {
             width: 500px;
@@ -48,8 +49,7 @@
                     src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
                      alt="Google">
         </div>
-        <div class="margin-bottom: 150px;">
-            <class="thin-gray-box">
+        <div class="thin-gray-box" style="margin-bottom: 100px">
         </div>
         <div>
         <footer>
