--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
             margin-bottom: 150px;
             padding: 10 10 10 10;
             font-family:Arial, Helvetica, sans-serif;
+            font-size: 12px;
             height: 50px;
+            padding-right: 20px;
             }
         li {
             display: inline;
@@ -22,11 +24,11 @@
         }
         .thin-gray-box {
             width: 500px;
-            height: 50px;
+            height: 40px;
             border-color: gray;
             border-width: 2px;
             border-style: solid;
-            border-radius: 20px;
+            border-radius: 30px;
             margin: auto;
         }
     
@@ -35,11 +37,11 @@
                 <div>
                 <nav>
                 <ul>
-                    <li style="float: left; padding: 5px;"><a>About</a></li>
-                    <li style="float: left; padding: 5px;"><a>Store</a></li>
-                     <li style="float: right; padding: 5px; background: blue;"><a>Sign In</a></li>
-                    <li style="float: right; padding: 5px;"><a>Images</a></li>
-                    <li style="float: right; padding: 5px;"><a>Gmail</a></li>
+                    <li href="#" style="float: left; padding: 5px;"><a>About</a></li>
+                    <li href="#" style="float: left; padding: 5px;"><a>Store</a></li>
+                     <li href="#" style="float: right; padding: 5px; background: cyan;"><a>Sign In</a></li>
+                    <li href="#" style="float: right; padding: 5px;"><a>Images</a></li>
+                    <li href="#" style="float: right; padding: 5px;"><a>Gmail</a></li>
                 </ul>
                 </nav>
                  </div>
@@ -49,18 +51,23 @@
                     src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
                      alt="Google">
         </div>
-        <div class="thin-gray-box" style="margin-bottom: 100px">
+        <div class="thin-gray-box" style="margin-bottom: 20px">
         </div>
-        <div>
+        <div style="margin-bottom: 150px;">
+            <ul>
+                <li href="#" style="float: center; padding: 10px; background-color: gray;"><a>Google Search</a></li>
+                <li href="#" style="float: center; padding: 10px; background-color: gray;"><a>I'm Feeling Lucky</a></li>
+            </ul>
+        </div>
         <footer>
             <nav>
                 <ul>
-                    <li style="float: left; padding: 5px;"><a>Advertising</a></li>
-                    <li style="float: left; padding: 5px;"><a>Business</a></li>
-                    <li style="float: left; padding: 5px;"><a>How Search Works</a></li>
-                    <li style="float: right; padding: 5px;"><a>Settings</a></li>
-                    <li style="float: right; padding: 5px;"><a>Terms</a></li>
-                    <li style="float: right; padding: 5px;"><a>Privacy</a></li>
+                    <li href="#" style="float: left; padding: 5px;"><a>Advertising</a></li>
+                    <li href="#" style="float: left; padding: 5px;"><a>Business</a></li>
+                    <li href="#" style="float: left; padding: 5px;"><a>How Search Works</a></li>
+                    <li href="#" style="float: right; padding: 5px;"><a>Settings</a></li>
+                    <li href="#" style="float: right; padding: 5px;"><a>Terms</a></li>
+                    <li href="#" style="float: right; padding: 5px;"><a>Privacy</a></li>
                 </ul>
             </nav>
         </footer>
