--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             position: relative;
             margin: auto;
             display: block;
+            margin-bottom: 80px;
         }
         .thin-gray-box {
             width: 500px;
@@ -51,13 +52,16 @@
                     src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
                      alt="Google">
         </div>
-        <div class="thin-gray-box" style="margin-bottom: 20px">
+        <div class="thin-gray-box" style="margin-bottom: 60px">
         </div>
-        <div style="margin-bottom: 150px;">
+        <div style="margin-bottom: 60px; text-align: center;">
             <ul>
-                <li href="#" style="float: center; padding: 10px; background-color: gray;"><a>Google Search</a></li>
-                <li href="#" style="float: center; padding: 10px; background-color: gray;"><a>I'm Feeling Lucky</a></li>
+                <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>Google Search</a></li>
+                <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>I'm Feeling Lucky</a></li>
             </ul>
+        </div>
+        <div style="text-align: center;margin-bottom: 200px;">
+            <p>Google offered in <a href="#">Francais</a></p>
         </div>
         <footer>
             <nav>
