--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             margin-bottom: 150px;
             padding: 10 10 10 10;
             font-family:Arial, Helvetica, sans-serif;
-            font-size: 12px;
+            font-size: 13px;
             height: 50px;
             padding-right: 20px;
             }
@@ -21,7 +21,7 @@
             position: relative;
             margin: auto;
             display: block;
-            margin-bottom: 80px;
+            margin-bottom: 30px;
         }
         .thin-gray-box {
             width: 500px;
@@ -52,20 +52,21 @@
                     src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
                      alt="Google">
         </div>
-        <div class="thin-gray-box" style="margin-bottom: 60px">
+        <div class="thin-gray-box" style="margin-bottom: 40px">
         </div>
-        <div style="margin-bottom: 60px; text-align: center;">
+        <div style="margin-bottom: 40px; text-align: center;">
             <ul>
                 <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>Google Search</a></li>
                 <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>I'm Feeling Lucky</a></li>
             </ul>
         </div>
-        <div style="text-align: center;margin-bottom: 200px;">
+        <div style="text-align: center;margin-bottom: 150px; font-family: Arial, Helvetica, sans-serif; font-size: 13px;">
             <p>Google offered in <a href="#">Francais</a></p>
         </div>
+        <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px;"><p style="background-color: lightgray;">Canada</p></div>
         <footer>
             <nav>
-                <ul>
+                <ul style="background-color: lightgray;">
                     <li href="#" style="float: left; padding: 5px;"><a>Advertising</a></li>
                     <li href="#" style="float: left; padding: 5px;"><a>Business</a></li>
                     <li href="#" style="float: left; padding: 5px;"><a>How Search Works</a></li>
