--- a/index.html
+++ b/index.html
@@ -54,19 +54,17 @@
                      alt="Google">
         </div>
         <div class="thin-gray-box" style="margin-bottom: 40px">
+            <input type="text">
         </div>
         <div style="margin-bottom: 40px; text-align: center;">
-            <ul>
-                <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>Google Search</a></li>
-                <li href="#" style="float: center; padding: 10px; background-color: lightgray;"><a>I'm Feeling Lucky</a></li>
-            </ul>
+            <form style="float: center; height: 40px;">
+                <button type="submit">Google Search</button>
+                <button type="submit">I'm Feeling Lucky</button>
+            </form>
         </div>
-        <form>
-            <input style="background-color: lightgrey;">
-            <button type="submit">Google Search</button>
-            <button type="submit">I'm Feeling Lucky</button>
-        </form>
-        </div>
+        <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px;">Google offered in: <a href="#">Francais</a>
+        </p>
+         </div>
         <footer>
             <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px;"><p style="background-color: lightgray;">Canada</p></div>
             <nav>
