--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      alt="Google">
         </div>
         <div class="thin-gray-box" style="margin-bottom: 40px">
-            <input type="text">
+            <input type="text" style="float: center; border-color: none; width: 200px;">
         </div>
         <div style="margin-bottom: 40px; text-align: center;">
             <form style="float: center; height: 40px;">
@@ -62,7 +62,7 @@
                 <button type="submit">I'm Feeling Lucky</button>
             </form>
         </div>
-        <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px;">Google offered in: <a href="#">Francais</a>
+        <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; text-align: center; margin-bottom: 100px">Google offered in: <a href="#">Francais</a>
         </p>
          </div>
         <footer>
