--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      alt="Google">
         </div>
         <div class="thin-gray-box" style="margin-bottom: 40px">
-            <input type="text" style="float: center; border-color: none; width: 200px;">
+            <input type="text" style="margin: auto; border: transparent; width: 200px;">
         </div>
         <div style="margin-bottom: 40px; text-align: center;">
             <form style="float: center; height: 40px;">
@@ -62,19 +62,19 @@
                 <button type="submit">I'm Feeling Lucky</button>
             </form>
         </div>
-        <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; text-align: center; margin-bottom: 100px">Google offered in: <a href="#">Francais</a>
+        <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; text-align: center; margin-bottom: 160px">Google offered in: <a href="#">Francais</a>
         </p>
          </div>
         <footer>
-            <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px;"><p style="background-color: lightgray;">Canada</p></div>
+            <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding-left: 20px;"><p style="background-color: lightgray;">Canada</p></div>
             <nav>
                 <ul style="background-color: lightgray;">
-                    <li href="#" style="float: left; padding: 5px;"><a>Advertising</a></li>
-                    <li href="#" style="float: left; padding: 5px;"><a>Business</a></li>
-                    <li href="#" style="float: left; padding: 5px;"><a>How Search Works</a></li>
-                    <li href="#" style="float: right; padding: 5px;"><a>Settings</a></li>
-                    <li href="#" style="float: right; padding: 5px;"><a>Terms</a></li>
-                    <li href="#" style="float: right; padding: 5px;"><a>Privacy</a></li>
+                    <li href="#" style="float: left; padding-right: 10px;"><a>Advertising</a></li>
+                    <li href="#" style="float: left; padding-right: 10px;"><a>Business</a></li>
+                    <li href="#" style="float: left;"><a>How Search Works</a></li>
+                    <li href="#" style="float: right; padding-left: 10px;"><a>Settings</a></li>
+                    <li href="#" style="float: right; padding-left: 10px;"><a>Terms</a></li>
+                    <li href="#" style="float: right;"><a>Privacy</a></li>
                 </ul>
             </nav>
         </footer>
