--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      alt="Google">
         </div>
         <div class="thin-gray-box" style="margin-bottom: 40px">
-            <input type="text" style="margin: auto; border: transparent; width: 200px;">
+            <input type="text" style="margin: auto; border: transparent; display: block; float: center; width: 200px;">
         </div>
         <div style="margin-bottom: 40px; text-align: center;">
             <form style="float: center; height: 40px;">
@@ -65,10 +65,10 @@
         <div><p style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; text-align: center; margin-bottom: 160px">Google offered in: <a href="#">Francais</a>
         </p>
          </div>
-        <footer>
-            <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding-left: 20px;"><p style="background-color: lightgray;">Canada</p></div>
+        <footer style="background-color: lightgrey">
+            <div href="#" style="line-height: 40px; font-family: Arial, Helvetica, sans-serif; font-size: 13px; padding-left: 40px;"><p>Canada</p></div>
             <nav>
-                <ul style="background-color: lightgray;">
+                <ul>
                     <li href="#" style="float: left; padding-right: 10px;"><a>Advertising</a></li>
                     <li href="#" style="float: left; padding-right: 10px;"><a>Business</a></li>
                     <li href="#" style="float: left;"><a>How Search Works</a></li>
