--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
          <header>
                 <div>
                 <nav>
-                <ul>
-                    <li href="#" style="float: left; padding: 5px;"><a>About</a></li>
-                    <li href="#" style="float: left; padding: 5px;"><a>Store</a></li>
-                     <li href="#" style="float: right; padding: 5px; background: cyan;border-radius: 2px;"><a>Sign In</a></li>
-                    <li href="#" style="float: right; padding: 5px;"><a>Images</a></li>
-                    <li href="#" style="float: right; padding: 5px;"><a>Gmail</a></li>
+                <ul style="vertical-align: middle;">
+                    <li href="#" style="float: left; padding: 10px;"><a>About</a></li>
+                    <li href="#" style="float: left; padding: 10px;"><a>Store</a></li>
+                     <li href="#" style="float: right; padding: 10px; background: cyan;border-radius: 5px;"><a>Sign In</a></li>
+                    <li href="#" style="float: right; padding: 10px;"><a>Images</a></li>
+                    <li href="#" style="float: right; padding: 10px;"><a>Gmail</a></li>
                 </ul>
                 </nav>
                  </div>
