--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <ul style="vertical-align: middle;">
                     <li href="#" style="float: left; padding: 10px;"><a>About</a></li>
                     <li href="#" style="float: left; padding: 10px;"><a>Store</a></li>
-                     <li href="#" style="float: right; padding: 10px; background: cyan;border-radius: 5px;"><a>Sign In</a></li>
-                    <li href="#" style="float: right; padding: 10px;"><a>Images</a></li>
+                     <li href="#" style="float: right; padding: 10px; background-color: lightblue; border-radius: 5px;"><button type="submit">Sign In</button></li>                    
+                     <li href="#" style="float: right; padding: 10px;"><a>Images</a></li>
                     <li href="#" style="float: right; padding: 10px;"><a>Gmail</a></li>
                 </ul>
                 </nav>
